<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_0_minutes"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck,VisualLintButtonSize,VisualLintOverlap"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>